<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnlineCodeGeneratorActivity">

    <TextView
        android:id="@+id/idTVHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTVHead"
        android:hint="@string/enter_code"
        android:fontFamily="@font/lato_bold"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:id="@+id/idEdtCode"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/idBtnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEdtCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/create"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/idBtnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idBtnCreate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/join"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/idBtnJoin"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idPBLoading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/quit_game"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />




</RelativeLayout>