<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiPlayerGameSelectionActivity">

    <TextView
        android:id="@+id/idTVHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="Online or Offline"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/idBtnOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTVHead"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/online_mode"
        android:fontFamily="@font/lato_bold"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/idBtnOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idBtnOnline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/offline_mode"
        android:fontFamily="@font/lato_bold"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idBtnOffline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/quit_game"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />

</RelativeLayout>