<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view_name"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/name_of_the_app"
        android:translationY="20dp" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_board"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/lato_bold"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:translationY="30dp"
        android:typeface="normal"
        tools:text="Computer Won" />

    <GridLayout
        android:id="@+id/layout_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:padding="16dp"
        android:rowCount="3"
        android:translationY="20dp"
        android:useDefaultMargins="true" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_width="380dp"
        android:layout_height="80dp">

        <Button
            android:id="@+id/button_restart"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/new_game"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_difficulty"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/change_difficulty"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_quit"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/quit_game"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>